RESOLVED FIXED286355
[visionOS] Don't reset CALayers `separated` flag if it was never set
https://bugs.webkit.org/show_bug.cgi?id=286355
Summary [visionOS] Don't reset CALayers `separated` flag if it was never set
Etienne
Reported 2025-01-22 05:17:13 PST
This is causing some unwanted side effects.
Attachments
Etienne
Comment 1 2025-01-22 05:21:51 PST
Etienne
Comment 2 2025-01-22 05:22:16 PST
EWS
Comment 3 2025-01-22 12:20:55 PST
Committed 289253@main (3b6473e8bfb5): <https://commits.webkit.org/289253@main> Reviewed commits have been landed. Closing PR #39377 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.