[visionOS] Don't reset CALayers `separated` flag if it was never set https://bugs.webkit.org/show_bug.cgi?id=286355 <rdar://140374118>

Reviewed by Simon Fraser.

We update the CALayer flag on both `SeparatedChanged` _and_
`VisibleRectChanged` since it depends on viewport visibility.
This can cause side effects on layers that were never separated.

If the flag is already false don't make any CA change.

* Source/WebKit/Shared/RemoteLayerTree/RemoteLayerTreePropertyApplier.mm:
(WebKit::RemoteLayerTreePropertyApplier::applyProperties):

Canonical link: https://commits.webkit.org/289253@main